fix footer menu vertical stacking, less spacing between icon group and menu icons (top)

--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -25,18 +25,24 @@ header {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    gap: 1px;
 
     ul {
-        display: inherit;
+        display: flex;
         flex-wrap: inherit;
         justify-content: inherit;
         align-items: inherit;
         gap: inherit;
+        gap: 1px;
         margin: 0;
         padding: 0;
         list-style: none;
     }
+}
+
+#menu-icons-group {
+    gap: 1px;
+    margin: 0;
+    padding: 0;
 }
 
 .nav-links {
@@ -160,21 +166,17 @@ header {
 
     .nav-navs {
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
     }
 }
 
 @media only screen and (max-width: 600px) {
     .nav-navs {
-        flex-wrap: wrap;
-        justify-content: center;
         margin-top: 0.8rem;
-        width: 100%;
     }
 
     .navbar {
         flex-direction: column;
-        justify-content: center;
         align-items: center;
     }
 }
